force-app/main/default/objects/CSA_ProductInventory__c/CSA_ProductInventory__c.object-meta.xml
<CustomObject>
    <label>Vaccine Inventory</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Inventory Level Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vaccine Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>