force-app/main/default/objects/CSA_ProductInventory__c/fields/Batch_number__c.field-meta.xml
<CustomField>
    <fullName>Batch_number__c</fullName>
    <label>Batch number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>