force-app/main/default/objects/CSA_ProductInventory__c/fields/Distribution_Center1__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Inventory_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>