force-app/main/default/objects/CSA_ProductInventory__c/fields/Distribution_Center__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribution Center</label>
    <referenceTo>Distribution_Center__c</referenceTo>
    <relationshipName>Intenvory_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>