force-app/main/default/objects/CSA_ProductInventory__c/fields/No_of_vaccine_used__c.field-meta.xml
<CustomField>
    <fullName>No_of_vaccine_used__c</fullName>
    <label>No of vaccine used</label>
    <summaryForeignKey>CSA_VaccineAssessment__c.Inventory_Level__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>