force-app/main/default/objects/CSA_ProductInventory__c/fields/On_Hand_Quantity__c.field-meta.xml
<CustomField>
    <fullName>On_Hand_Quantity__c</fullName>
    <formula>Received_number__c -  No_of_vaccine_used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hand Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>