force-app/main/default/objects/CSA_ProductInventory__c/fields/Received_number__c.field-meta.xml
<CustomField>
    <fullName>Received_number__c</fullName>
    <label>Received number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>