force-app/main/default/objects/CSA_ProductInventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Batch_number__c</columns>
    <columns>Distribution_Center__c</columns>
    <columns>No_of_vaccine_used__c</columns>
    <columns>On_Hand_Quantity__c</columns>
    <columns>Received_number__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>